remove config value for command alternative; yawp is the default alternative to wp now