@@ -1,5 +1,6 @@
 package de.z0rdak.yawp.config.server;
 
+import de.z0rdak.yawp.YetAnotherWorldProtector;
 import net.minecraftforge.common.ForgeConfigSpec;
 
 import java.util.Arrays;
@@ -8,7 +9,7 @@ import java.util.List;
 public class FlagConfig {
 
     public static final ForgeConfigSpec CONFIG_SPEC;
-
+    public static final String CONFIG_NAME = YetAnotherWorldProtector.MODID + "-flags.toml";
     public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BREAK_FLAG_ENTITIES;
     public static final ForgeConfigSpec.ConfigValue<List<? extends String>> BREAK_FLAG_ENTITY_TAGS;
 
@@ -19,11 +20,11 @@ public class FlagConfig {
 
         BREAK_FLAG_ENTITIES = BUILDER
                 .comment("Entities included/protected by the break block flag. Includes entities like armor stands and pictures by default")
-                .defineListAllowEmpty(Arrays.asList("break_flag_entities"), FlagConfig::defaultEntityBreakFlagEntries, FlagConfig::isValidEntityEntry);
+                .defineListAllowEmpty(List.of("break_flag_entities"), FlagConfig::defaultEntityBreakFlagEntries, FlagConfig::isValidEntityEntry);
 
         BREAK_FLAG_ENTITY_TAGS = BUILDER
                 .comment("Entity tags included/protected by the break block flag.")
-                .defineListAllowEmpty(Arrays.asList("break_flag_entity_tags"), () -> Arrays.asList(""), FlagConfig::isValidTagEntry);
+                .defineListAllowEmpty(List.of("break_flag_entity_tags"), () -> List.of(""), FlagConfig::isValidTagEntry);
 
         BUILDER.pop();
         CONFIG_SPEC = BUILDER.build();
